--- a/frontend/src/components/codeblockCard/codeblockCard.css
+++ b/frontend/src/components/codeblockCard/codeblockCard.css
@@ -2,11 +2,13 @@
   background-color: rgb(202, 197, 197);
   display: flex;
   justify-content: center;
-
   color: black;
   margin: 0.2rem 1.5rem;
-  padding: 0.2rem 1rem;
+  padding: 0.4rem 1rem;
 }
-.active {
-  color: red;
+.codeblock-card p {
+  margin: 14px;
+}
+.codeblock-card button {
+  font-weight: bold;
 }
